[package]

name = "yaxpeax-arm"
version = "0.0.7"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-arm/"
description = "arm decoders for the yaxpeax project"
keywords = ["disassembler", "decoder", "armv7", "armv8"]

[dependencies]
yaxpeax-arch = { version = "0.0.5", default-features = false, features = [] }
bitvec = "0.19"
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = ["use-serde"]

use-serde = ["yaxpeax-arch/use-serde", "serde", "serde_derive"]
