[package]

name = "yaxpeax-arm"
version = "0.2.3"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-arm/"
description = "arm decoders for the yaxpeax project"
keywords = ["disassembler", "decoder", "armv7", "armv8"]
edition = "2018"

[lib]

[workspace]
members = [
    "differential-tests"
]

[dependencies]
yaxpeax-arch = { version = "0.2.2", default-features = false, features = [] }
bitvec = "0.19"
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }

[features]
default = ["std", "use-serde"]

# opt-in for std-related Error impl - necessary to `?`-unwrap `DecodeError`.
std = ["yaxpeax-arch/std"]

use-serde = ["yaxpeax-arch/use-serde", "serde", "serde_derive"]
